# reframe

./: .gitignore  .gitmodules  HACKING.md  README.md  meson.build  meson_options.txt  meson_post_install.sh
dists/: example.conf  meson.build  reframe-rdp-audio.desktop.in  reframe-rdp-clipboard.desktop.in  reframe-server@.service.in  reframe-session.desktop.in  reframe-streamer@.service.in  reframe-sysusers.conf.in  reframe-tmpfiles.conf.in  reframe@.socket.in
docs/: CNAME  index.html
docs/css/: index.css
docs/images/: monitor-mapping.drawio
docs/superpowers/plans/: 2026-07-01-rdp-performance.md
reframe-common/: config.h.in  meson.build  rf-buffer.c  rf-buffer.h  rf-clipboard-rich.c  rf-clipboard-rich.h  rf-common.c  rf-common.h  rf-config.c  rf-config.h  rf-display-layout.c  rf-display-layout.h  rf-rdp-audio-stream.c  rf-rdp-audio-stream.h  rf-resize.c  rf-resize.h
reframe-server/: main.c  meson.build  rf-app.c  rf-app.h  rf-converter.c  rf-converter.h  rf-lvnc-server.c  rf-lvnc-server.h  rf-nvnc-server.c  rf-nvnc-server.h  rf-rdp-av1.c  rf-rdp-av1.h  rf-rdp-avc.c  rf-rdp-avc.h  rf-rdp-cliprdr.c  rf-rdp-cliprdr.h  rf-rdp-core.c  rf-rdp-core.h  rf-rdp-dvc.c  rf-rdp-dvc.h  rf-rdp-gfx.c  rf-rdp-gfx.h  rf-rdp-input.c  rf-rdp-input.h  rf-rdp-mcs.c  rf-rdp-mcs.h  rf-rdp-nsc.c  rf-rdp-nsc.h  rf-rdp-planar.c  rf-rdp-planar.h  rf-rdp-proto.c  rf-rdp-proto.h  rf-rdp-rdpsnd.c  rf-rdp-rdpsnd.h  rf-rdp-rfx.c  rf-rdp-rfx.h  rf-rdp-server.c  rf-rdp-server.h  rf-remote-server.c  rf-remote-server.h  (+8 more)
reframe-session/: main.c  meson.build  rdp-audio.c  rdp-clipboard.c  rf-clipboard-text.c  rf-clipboard-text.h  rf-rdp-audio-pipewire.c  rf-rdp-audio-pipewire.h  rf-rdp-audio-stream.h  rf-rdp-clipboard-display.c  rf-rdp-clipboard-display.h  rf-rdp-clipboard-image.c  rf-rdp-clipboard-image.h  rf-rdp-clipboard-provider.c  rf-rdp-clipboard-provider.h  rf-rdp-clipboard-stream.c  rf-rdp-clipboard-stream.h  rf-rdp-clipboard-wayland.c  rf-rdp-clipboard-wayland.h
reframe-streamer/: main.c  meson.build
tests/: test-clipboard-rich.c  test-clipboard-text.c  test-config.c  test-display-layout.c  test-rdp-audio-stream.c  test-rdp-av1.c  test-rdp-avc.c  test-rdp-clipboard-display.c  test-rdp-clipboard-provider.c  test-rdp-clipboard-stream.c  test-rdp-clipboard-wayland.c  test-rdp-cliprdr.c  test-rdp-core.c  test-rdp-dvc.c  test-rdp-gfx.c  test-rdp-input.c  test-rdp-mcs.c  test-rdp-nsc.c  test-rdp-proto.c  test-rdp-rdpsnd.c  test-rdp-rfx.c  test-resize.c  test_invariant_rf-converter.c
