option(
  'confdir',
  type: 'string',
  value: '',
  description: 'Configuration directory for the system daemon.'
)

option(
  'username',
  type: 'string',
  value: 'reframe',
  description: 'User name for the system daemon.'
)

option(
  'xdgautostartdir',
  type: 'string',
  value: '',
  description: 'XDG autostart directory for the session daemon.'
)

option(
  'systemd',
  type: 'boolean',
  value: true,
  description: 'Enable systemd support.'
)

option(
  'systemunitdir',
  type: 'string',
  value: '',
  description: 'systemd system unit dir.'
)

option(
  'sysusersdir',
  type: 'string',
  value: '',
  description: 'systemd sysusers dir.'
)

option(
  'tmpfilesdir',
  type: 'string',
  value: '',
  description: 'systemd tmpfiles dir.'
)

option(
  'neatvnc',
  type: 'boolean',
  value: false,
  description: 'Enable experimental neatvnc implementation.'
)
